# HantekStation

./: .gitignore  Dockerfile.dev  compose.dev.yml  compose.yml  readme.md
.github/workflows/: ci.yml
server/: .flake8  Dockerfile  Dockerfile.dev  pyproject.toml  requirements.txt
server/api/: conftest.py  test_server.py  ws.py
ui/: .prettierrc.json  Dockerfile.dev  package-lock.json  package.json
ui/src/: App.vue  websocket.js
ui/src/assets/: base.css  main.css  water.css
ui/src/components/: HalfGauge.vue  ValueControl.vue
